# hypercode

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.txt  go-book.tex  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
.github/workflows/: test-lessons.yml
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
cli/: AGENTS.md  CHANGELOG.md  NOTICE  PNPM.md  README.md  announcement_tip.toml  cliff.toml  flake.nix  justfile  package.json
cli/.devcontainer/: README.md  devcontainer.json
cli/.github/: pull_request_template.md
cli/docs/: CLA.md  agents_md.md  authentication.md  config.md  contributing.md  example-config.md  exec.md  execpolicy.md  exit-confirmation-prompt-design.md  getting-started.md  install.md  open-source-fund.md  prompts.md  sandbox.md  skills.md  slash_commands.md  tui-alternate-screen.md  tui-chat-composer.md
cli/hypercode-cli/: Dockerfile  README.md  package-lock.json  package.json
cli/hypercode-rs/: Cargo.toml  README.md  default.nix
cli/hypercode-rs/app-server/: Cargo.toml  README.md
cli/hypercode-rs/app-server/src/: bespoke_event_handling.rs  config_api.rs  fuzzy_file_search.rs  hypercode_message_processor.rs  lib.rs  main.rs  message_processor.rs  models.rs  outgoing_message.rs
cli/hypercode-rs/app-server/tests/common/: Cargo.toml  auth_fixtures.rs  lib.rs  mcp_process.rs  models_cache.rs  rollout.rs
cli/hypercode-rs/app-server/tests/suite/: archive_thread.rs  auth.rs  config.rs  create_thread.rs  fork_thread.rs  fuzzy_file_search.rs  hypercode_message_processor_flow.rs  interrupt.rs  list_resume.rs  login.rs  mod.rs  output_schema.rs  send_message.rs  set_default_model.rs  user_agent.rs  user_info.rs
cli/hypercode-rs/app-server/tests/suite/v2/: account.rs  analytics.rs  config_rpc.rs  initialize.rs  model_list.rs  output_schema.rs  rate_limits.rs  review.rs  thread_archive.rs  thread_fork.rs  thread_list.rs  thread_loaded_list.rs  thread_resume.rs  thread_rollback.rs  thread_start.rs  turn_interrupt.rs  turn_start.rs
cli/hypercode-rs/arg0/: Cargo.toml
cli/hypercode-rs/arg0/src/: lib.rs
cli/hypercode-rs/backend-client/: Cargo.toml
cli/hypercode-rs/backend-client/src/: client.rs  types.rs
cli/hypercode-rs/chatgpt/: Cargo.toml  README.md
cli/hypercode-rs/chatgpt/src/: apply_command.rs  chatgpt_client.rs  chatgpt_token.rs  get_task.rs
cli/hypercode-rs/chatgpt/tests/: task_turn_fixture.json
cli/hypercode-rs/chatgpt/tests/suite/: apply_command_e2e.rs
cli/hypercode-rs/cli/: Cargo.toml
cli/hypercode-rs/cli/src/: debug_sandbox.rs  lib.rs  login.rs  main.rs  mcp_cmd.rs  wsl_paths.rs
cli/hypercode-rs/cli/tests/: execpolicy.rs  mcp_add_remove.rs  mcp_list.rs
cli/hypercode-rs/common/: Cargo.toml  README.md
cli/hypercode-rs/common/src/: approval_mode_cli_arg.rs  approval_presets.rs  config_override.rs  config_summary.rs  oss.rs  sandbox_mode_cli_arg.rs  sandbox_summary.rs
cli/hypercode-rs/core/tests/common/: Cargo.toml  lib.rs  responses.rs  test_hypercode.rs  test_hypercode_exec.rs
cli/hypercode-rs/exec/: Cargo.toml
cli/hypercode-rs/exec/src/: cli.rs  event_processor.rs  event_processor_with_human_output.rs  event_processor_with_jsonl_output.rs  exec_events.rs  lib.rs  main.rs
cli/hypercode-rs/exec/tests/: event_processor_with_json_output.rs
cli/hypercode-rs/exec/tests/suite/: add_dir.rs  apply_patch.rs  auth_env.rs  originator.rs  output_schema.rs  resume.rs  sandbox.rs  server_error_exit.rs
cli/hypercode-rs/feedback/: Cargo.toml
cli/hypercode-rs/feedback/src/: lib.rs
cli/hypercode-rs/linux-sandbox/: Cargo.toml  README.md
cli/hypercode-rs/linux-sandbox/src/: landlock.rs  lib.rs  linux_run_main.rs  main.rs  mounts.rs
cli/hypercode-rs/linux-sandbox/tests/suite/: landlock.rs
cli/hypercode-rs/mcp-server/: Cargo.toml
cli/hypercode-rs/mcp-server/src/: exec_approval.rs  hypercode_tool_config.rs  hypercode_tool_runner.rs  lib.rs  main.rs  message_processor.rs  outgoing_message.rs  patch_approval.rs
cli/hypercode-rs/mcp-server/tests/common/: Cargo.toml  lib.rs  mcp_process.rs
cli/hypercode-rs/mcp-server/tests/suite/: hypercode_tool.rs  mod.rs
cli/hypercode-rs/rest-api/: Cargo.toml
cli/hypercode-rs/rest-api/src/: error.rs  lib.rs  main.rs  router.rs  sse.rs  state.rs
cli/hypercode-rs/rest-api/src/handlers/: account.rs  config.rs  health.rs  mod.rs  models.rs  threads.rs  turns.rs
cli/scripts/: debug-hypercode.sh  stage_npm_packages.py
cli/sdk/python/: README.md  pyproject.toml
cli/sdk/python/src/hypercode/: __init__.py  client.py  models.py  thread.py
cli/shell-tool-mcp/: README.md  package.json
components/: code-editor.tsx  lesson-content.tsx  lesson-layout.tsx  lesson-shell.tsx  sidebar.tsx
e2e/: courses.spec.ts
lib/: go-runner.ts  progress.ts
lib/lessons/: index.ts
public/gleam/: gleam_wasm.js  stdlib-sources.json
public/tcc/: tcc.js  tcc.wasm
public/wasmsharp/: Compilation.d.ts  Compilation.js  CompilationInterop.d.ts  CompilationInterop.js  README.md  WasmCompiler.d.ts  WasmCompiler.js  WasmSharpWorker.d.ts  WasmSharpWorker.js  dotnet.js  dotnet.native.js  index.d.ts  index.js  initializeWasmSharpModule.d.ts  initializeWasmSharpModule.js  main.js  package.json  worker.d.ts  worker.js
public/zig/: README.md  zig.wasm
scripts/: build-gleam-wasm.sh  build-holyc-wasm.sh  build-wasm.sh  build-wasmsharp.ts  build-zig-wasm.sh
scripts/holyc-wasm/: aiwnios-headless.patch
src/: go-book.tex
src/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
src/components/: code-editor.tsx  content-shell.tsx  course-theme-wrapper.tsx  lesson-content.tsx  lesson-shell-wrapper.tsx  lesson-shell.tsx  output-panel.tsx  schema-drawer.tsx  sidebar.tsx  theme-toggle.tsx
src/lib/: arm64-runner.ts  c-runner.ts  cpp-runner.ts  cpp-transpiler.ts  csharp-runner.ts  elixir-runner.ts  fsharp-runner.ts  gleam-runner.ts  go-runner.ts  haskell-runner.ts  holyc-runner.ts  html-runner.ts  java-runner.ts  js-runner.ts  kotlin-runner.ts  lean-runner.ts  linux-runner.ts  linux-shell.ts  lua-runner.ts  music-runner.ts  progress.ts  (+25 more)
wasm/: main.go  symbols.go
(+2481 files in other folders)
