[package]
name = "hypercode-app-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "hypercode-app-server"
path = "src/main.rs"

[lib]
name = "hypercode_app_server"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
hypercode-arg0 = { workspace = true }
hypercode-common = { workspace = true, features = ["cli"] }
hypercode-core = { workspace = true }
hypercode-backend-client = { workspace = true }
hypercode-file-search = { workspace = true }
hypercode-login = { workspace = true }
hypercode-protocol = { workspace = true }
hypercode-app-server-protocol = { workspace = true }
hypercode-feedback = { workspace = true }
hypercode-rmcp-client = { workspace = true }
hypercode-utils-absolute-path = { workspace = true }
hypercode-utils-json-to-toml = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
mcp-types = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
uuid = { workspace = true, features = ["serde", "v7"] }

[dev-dependencies]
app_test_support = { workspace = true }
base64 = { workspace = true }
core_test_support = { workspace = true }
mcp-types = { workspace = true }
os_info = { workspace = true }
pretty_assertions = { workspace = true }
serial_test = { workspace = true }
wiremock = { workspace = true }
shlex = { workspace = true }
