[package]
name = "hypercode-backend-client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hypercode-backend-openapi-models = { path = "../hypercode-backend-openapi-models" }
hypercode-protocol = { workspace = true }
hypercode-core = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
