[package]
name = "hypercode-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "wrap_help"], optional = true }
hypercode-core = { workspace = true }
hypercode-lmstudio = { workspace = true }
hypercode-ollama = { workspace = true }
hypercode-protocol = { workspace = true }
serde = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

[features]
# Separate feature so that `clap` is not a mandatory dependency.
cli = ["clap", "serde", "toml"]
elapsed = []
sandbox_summary = []

[dev-dependencies]
clap = { workspace = true, features = ["derive", "wrap_help"] }
hypercode-utils-absolute-path = { workspace = true }
pretty_assertions = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
