[package]
name = "hypercode-rest-api"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "hypercode_rest_api"
path = "src/lib.rs"

[[bin]]
name = "hypercode-rest-api"
path = "src/main.rs"

[dependencies]
hypercode-app-server-protocol = { workspace = true }
hypercode-core = { workspace = true }
hypercode-common = { workspace = true }
hypercode-protocol = { workspace = true }
hypercode-feedback = { workspace = true }
hypercode-utils-json-to-toml = { workspace = true }
toml = { workspace = true }

axum = { workspace = true, features = ["macros", "json"] }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4"] }
async-stream = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true, features = ["json"] }
